--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@layer components {
+  .btn {
+    @apply 
+    bg-gray-500 
+    hover:bg-gray-700 
+    text-white 
+    py-2 
+    px-4 
+    m-0.5
+    text-sm
+    rounded-md
+  }
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
